# StringSearchVisualizer

./: .gitignore  .gitlab-ci.yml  README.md
AlgorithmsModule/: ABaseStepsExecutor.h  AVisualizationPainter.cpp  AVisualizationPainter.h  AlgorithmsModule_global.h  CController.cpp  CController.h  CMakeLists.txt  IBasePainter.h  IController.h  IControllerCreator.h  IControllerToolsetFactory.h  IPainter.h  IPainterFactory.h  IStepsExecutor.h  IVisualizationPainter.h  IVisualizationWidget.h  SupportedAlgorithmsAlphabet.h  SupportedAlgorithmsControllers.h  SupportedAlgorithmsToolsets.h  algorithmsmodule.cpp  algorithmsmodule.h  pch.h
AlgorithmsModule/Automaton/: CControllerCreator.cpp  CControllerCreator.h  CControllerToolsetFactory.cpp  CControllerToolsetFactory.h  CStepsExecutor.cpp  CStepsExecutor.h  IPainter.h
AlgorithmsModule/BoyerMoore/: CControllerCreator.cpp  CControllerCreator.h  CControllerToolsetFactory.cpp  CControllerToolsetFactory.h  CStepsExecutor.cpp  CStepsExecutor.h  IPainter.h
AlgorithmsModule/BruteForce/: CControllerCreator.cpp  CControllerCreator.h  CControllerToolsetFactory.cpp  CControllerToolsetFactory.h  CStepsExecutor.cpp  CStepsExecutor.h  CVisualizationPainter.cpp  CVisualizationPainter.h  IPainter.h
AlgorithmsModule/Steps/: CComparison.cpp  CComparison.h  CDrawAutomatonNode.cpp  CDrawAutomatonNode.h  CFalseComparison.cpp  CFalseComparison.h  CMovePattern.cpp  CMovePattern.h  CStartAutomaton.cpp  CStartAutomaton.h  CStateChangedAutomaton.cpp  CStateChangedAutomaton.h  CTrueComparison.cpp  CTrueComparison.h  Constants.h  IStep.h
MainWindow/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h
MainWindow/ListElements/: CAlgorithmsListWidgetItem.cpp  CAlgorithmsListWidgetItem.h  CItem.cpp  CItem.h  IAlgorithmsListWidgetItem.h
MainWindow/Visualization/: ABasePainter.cpp  ABasePainter.h  CPainterFactory.cpp  CPainterFactory.h  Constants.h
MainWindow/Visualization/Automaton/: CEllipseItem.cpp  CEllipseItem.h  CPainter.cpp  CPainter.h
MainWindow/Visualization/BoyerMoore/: CPainter.cpp  CPainter.h
MainWindow/Visualization/BruteForce/: CPainter.cpp  CPainter.h  CRectItem.cpp  CRectItem.h  CTextItem.cpp  CTextItem.h
MainWindow/Visualization/SceneElements/: CEllipseItem.cpp  CEllipseItem.h  CRectItem.cpp  CRectItem.h  CTextItem.cpp  CTextItem.h  Constants.h
MainWindow/Window/: CVisualizationWidget.cpp  CVisualizationWidget.h  mainwindow.cpp  mainwindow.h
MainWindow/Window/ListElements/: CItem.cpp  CItem.h
MainWindow/Window/Resources/: listResources.qrc  mainwindow.ui
MainWindow/Window/Visualization/: CPainter.cpp  CPainter.h  CRectItem.cpp  CRectItem.h  CTextItem.cpp  CTextItem.h  CVisualizationPainter.cpp  CVisualizationPainter.h  Constants.h  VisualizationConstants.h
TestsModule/: CControllerUT.cpp  CMakeLists.txt  TestCollector.h  main.cpp  pch.h  tst_firsttest.cpp
TestsModule/AlgorithmsModuleTests/: CControllerUT.cpp
TestsModule/AlgorithmsModuleTests/Automaton/: AutomatonCControllerToolsetFactoryUT.cpp  AutomatonCStepsExecutorUT.cpp
TestsModule/AlgorithmsModuleTests/BoyerMoore/: BoyerMooreCControllerToolsetFactoryUT.cpp  BoyerMooreCStepsExecutorUT.cpp
TestsModule/AlgorithmsModuleTests/BruteForce/: BruteForceCControllerToolsetFactoryUT.cpp  BruteForceCStepsExecutorUT.cpp  CControllerToolsetFactoryUT.cpp  CStepsExecutorUT.cpp
TestsModule/BruteForce/: CControllerToolsetFactoryUT.cpp  CStepsExecutorUT.cpp
TestsModule/Mocks/: CControllerToolsetFactoryMock.h  CPainterFactoryMock.h  CPainterMock.h  CStepMock.h  CStepsExecutorMock.h
scripts/: windows_minions.ps1
